--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "classnames": "^2.5.1",
+    "immer": "^10.1.1",
     "negotiator": "^0.6.3",
     "next": "^14.1.3",
     "qs": "^6.12.0",
